--- a/res/HackPolyCSS-altnav.css
+++ b/res/HackPolyCSS-altnav.css
@@ -32,17 +32,17 @@ p.section {
 }
 
 .landing {
-	background:#0071bc;
-	/*background-image: url("cover-back.png");*/
+	/*background:#0071bc;*/
+	background: url("background_selective.jpg") 50% 0 no-repeat;
 	background-size: 100%;
 	background-position:center;
 	background-repeat: no-repeat;
-	min-height: 500px;
+	min-height: 5	00px;
 }
 
 .landing-text {
 	color:#fff;
-	text-shadow: 0px 1px 1px rgba(150, 150, 150, 1);
+	text-shadow: 0px 2px 2px rgba(0, 0, 0, .5);
 }
 
 .landing-info a{
