--- a/res/HackPolyCSS-altnav.css
+++ b/res/HackPolyCSS-altnav.css
@@ -14,6 +14,10 @@
 	max-height: 400px!important;
 }
 
+.clubimg.large {
+	max-height: 600px!important;
+}
+
 p.section {
 	padding-left:100px;
 	padding-right:100px;
