--- a/res/HackPolyCSS-altnav.css
+++ b/res/HackPolyCSS-altnav.css
@@ -6,6 +6,10 @@
 	secondary greenish: #1ABC9C;
 */
 
+html, body {
+	height: 100%;
+}
+
 .ic-prefix{
 	position:relative;
 	margin-left: 15px;
@@ -25,6 +29,99 @@
 .clubimg {
 	vertical-align: middle;
 	max-height: 400px!important;
+}
+
+.sponsor-logo-row-1{
+	display:block;
+	width:100%;
+	height:250px;
+}
+
+.sponsor-logo-row-1 img{
+	vertical-align: middle;
+	max-height: 250px;
+	margin-left: 15%;
+	margin-right: 15%;
+	width:70%;
+	float:left;
+}
+
+.sponsor-logo-row-2{
+	display:block;
+	width:100%;
+	height:200px;
+	line-height:200px;
+	vertical-align:middle;
+}
+
+.sponsor-logo-row-2 img{
+	display:inline-block;
+	vertical-align: middle;
+	line-height: 200px;
+	max-height: 200px;
+	margin-left: 4%;
+	margin-right: 4%;
+	max-width:40%;
+}
+
+.sponsor-logo-row-2 span {
+	display:inline-block;
+	vertical-align: middle;
+	line-height: 200px;
+	max-height: 200px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	width:49%;
+}
+
+.sponsor-logo-row-3 img{
+	vertical-align: middle;
+	max-height: 200px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.sponsor-logo-row-3{
+	display:block;
+	width:100%;
+	height:200px;
+}
+
+.sponsor-logo{
+	-webkit-filter:grayscale(95%);
+	-webkit-transition:webkit-filter;
+}
+
+.sponsor-logo:hover{
+	-webkit-filter:none;
+}
+
+.schedule-item{
+	display:block;
+	width:100%;
+	margin-top: 5px;
+	margin-bottom: 10px;
+}
+
+.schedule-item .time {
+	display:inline-block;
+	width: 150px;
+	font-weight: bold;
+	text-align: left;
+	vertical-align: top;
+}
+
+.schedule-item .event {
+	display:inline-block;
+	width:60%;
+	text-align: left;
+	font-size: 24px;
+}
+
+.schedule {
+	padding-top:10px;
+	padding-bottom:20px;
 }
 
 p.section {
