featured speaker and sony

--- a/res/HackPolyCSS-altnav.css
+++ b/res/HackPolyCSS-altnav.css
@@ -75,19 +75,34 @@ html, body {
 	width:49%;
 }
 
-.sponsor-logo-row-3 img{
-	vertical-align: middle;
-	max-height: 200px;
-	margin-left: auto;
-	margin-right: auto;
-}
-
 .sponsor-logo-row-3{
 	display:block;
 	width:100%;
 	height:200px;
+	line-height:200px;
+	vertical-align:middle;
 }
 
+.sponsor-logo-row-3 img{
+	display:inline-block;
+	vertical-align: middle;
+	line-height: 200px;
+	max-height: 200px;
+	margin-left: 1%;
+	margin-right: 1%;
+	max-width:30%;
+}
+
+.sponsor-logo-row-3 span {
+	display:inline-block;
+	vertical-align: middle;
+	line-height: 200px;
+	max-height: 200px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	width:33%;
+}
 .sponsor-logo{
 	-webkit-filter:grayscale(95%);
 	-webkit-transition:webkit-filter;
