--- a/res/styles.css
+++ b/res/styles.css
@@ -21,15 +21,16 @@ h1{
 	background-color:black;
 
 	/*filter: url("#blur");*/
-
+	
     -webkit-filter: blur(5px); 
 	-moz-filter: blur(5px);
 	filter: blur(5px);
+	
 }
 
 .main-content {
 	background-color:white;
-	opacity:0.4;
+	opacity:0.5;
 
 	position:relative;
 
@@ -37,6 +38,8 @@ h1{
 	height:100%;
 
 	font-family: 'Oswald', sans-serif;
+	margin-top:20%;
+	padding:10px;
 }
 
 .header-content{
@@ -45,4 +48,11 @@ h1{
 	text-align: center;
 	vertical-align: center;
 	color:white;
+	text-shadow: 2px 2px 3px rgba(0, 0, 0, 1);
+	padding-top:10%;
+	padding-bottom: 10%;
+}
+
+.header-content h1{
+	font-size:64px;
 }
