--- a/res/styles.css
+++ b/res/styles.css
@@ -6,32 +6,56 @@ h1, h2{
 body{
 	font-family:'Oswald';
 	font-weight:400 !important;
+	height:100%;
 }
 
 /* Bootstrap Overrides */
 .container-fluid {
+	position:inherit;
 	padding:0px !important;
+	z-index:-3;
 }
+
+.navbar-logo img{
+	display: block;
+	max-width:200px;
+	height:60px;
+	vertical-align: middle;
+
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.navbar-logo {
+	display:block;
+	padding:0px;
+	width: 200px;
+	height:auto;
+	margin-right: auto;
+	margin-left: auto!important;
+}
+
 /* End Bootstrap Overrides */
 
 /* Custom Styling */
+
+#top-image {
+	display:block;
+	background-image:url("cp_night_gray.png");
+	background-size: cover;
+}
+
+.navbuttons{
+	float:right;
+}
+
 .space20 {
 	width:100%;
 	height: 20%;
 }
-#what {
-	margin-top: 20%;
-}
-
-#about h2 {
-	display: block;
-	text-align: center;
-	width: 100%;
-}
 
 #prenav{
 	display: block;
-	position:fixed;
 	width:100%;
 	height:auto;
 	top:0;
@@ -44,29 +68,19 @@ body{
 #prenav img{
 	display: block;
 	max-width:200px;
-	max-height:100%;
+	max-height:60px;
 	margin-right: auto;
 	margin-left: auto;
 }
 
-.navbar-brand img{
-	display: block;
-	max-width:200px;
-	max-height:100%;
-	margin-right: auto;
-	margin-left: auto;
-}
 
-.navbar-brand {
-	padding:0px;
-}
 
 .animated-nav{
 	display:none;
 	opacity: 0;
 
-	-webkit-transition: height 0.7s, opacity 0.7s;
-	transition: height 0.7s, opacity 0.7s;
+	-webkit-transition: height 0.7s, opacity 0.7s, top 0.8s;
+	transition: height 0.7s, opacity 0.7s, top 0.8s;
 }
 
 .notransition {
@@ -77,46 +91,110 @@ body{
   transition: none !important;
 }
 
-.image-module img{
+#information{
+	display: block;
 	width:100%;
-	height:auto;
 
-	z-index:-20;
+	height:5 00px;
+	padding-top:20px;
 }
 
-.image-module .module-fixed {
-	position:fixed;
-	top:0px;
-	left:0px;
-}
-
-.image-module .module-floating {
-	position:absolute;
-	top:0px;
-	left:0px;
-}
-
-.image-module .overlay {
-	width:100%;
-	height: 100%;
-
-	background: black;
-	opacity: .3;
-
-	position:absolute;
-	top:0;
-	left:0;
-	z-index:-19;
-}
-
-.image-module {
-	position:relative;
-	overflow: hidden;
-	margin-bottom:8%;
-}
-
-.hero-line {
+#sponsors {
 	text-align: center;
+}
+
+#sponsors img {
+	max-height: 200px;
+}
+
+#sponsors .block {
+	display:block;
+	text-align:center;
+	margin-top:50px;
+	margin-bottom: 50px;
+}
+
+#sponsors .block a {
+	margin-left:20px;
+	margin-right:20px;
+}
+
+.footer {
+	display: block;
+	min-height: 60px;
+	background: #f8f8f8;
+	color:black;
+	/*border-radius: 4px;*/
+
+	border:solid #e7e7e7;
+	border-width: 4px 1px 0px 1px;
+
+	padding-top: 30px;
+	padding-bottom: 15px;
+
+	vertical-align: middle;
+}
+
+.subtle{
+	background-image:url("grey_@2x.png");
+	background-repeat: repeat;
+	height:100%;
+	margin-top: 0px;
+	overflow: auto;
+}
+
+.font-large {
+	font-size:24px;
+}
+
+
+.no-margin {
+	margin: 0px !important;
+}
+
+.title-line { 
+	width:100%; 
+	text-align:center; 
+	border-bottom: 1px solid #000; 
+	line-height:0.1em; 
+	margin:50px 0 50px; 
+} 
+
+.title-line span { 
+	background-image: url("grey_@2x.png");
+	background-repeat: repeat; 
+	background-position:center center;
+	padding:0 10px; 
+}
+
+.left-title-line { 
+	width:100%; 
+	text-align:left; 
+	border-bottom: 1px solid #000; 
+	line-height:0.1em; 
+	margin:50px 0 50px; 
+} 
+
+.left-title-line span { 
+	background-image: url("grey_@2x.png");
+	background-repeat: repeat; 
+	background-position:center center;
+	padding:0 10px; 
+}
+
+.left-title-line .white { 
+	background: white !important;
+}
+
+.page {
+	background:white !important;
+	color:black;
+	margin-top: 30px;
+	margin-bottom: 30px;
+
+	-webkit-box-shadow: 3px 3px 5px 0px rgba(50, 50, 50, 0.75);
+	-moz-box-shadow:    3px 3px 5px 0px rgba(50, 50, 50, 0.75);
+	box-shadow:         3px 3px 5px 0px rgba(50, 50, 50, 0.75);
 }
 
 .hero-line h1{
@@ -124,11 +202,16 @@ body{
 
 	font-size: 56px;
 
-	text-align: center;
 	color:white;
 
-	margin-top:25%;
-	margin-bottom:10%;
+	margin-bottom: 10%;
+}
+
+.hero-line p {
+	color:white;
+	font-size:36px;
+	font-family: 'Raleway';
+	font-weight: 200;
 }
 
 .hero-line .action {
@@ -147,9 +230,14 @@ body{
 }
 
 .hero-line{
+	display: block;
 	width:100%;
+	margin-top:7%;
+	margin-bottom: 10%;
 	margin-left: auto;
 	margin-right: auto;
+	text-align: center;
+	z-index: 1;
 }
 
 .blur-module h2 {
@@ -190,52 +278,6 @@ body{
 
 }
 
-.background-video{
-	width: 100%;
-	height:auto;
-
-	position:fixed;
-
-	left:0;
-	top:0;
-
-	z-index: -20;
-
-	background-color:black;
-
-	/*filter: url("#blur");*/
-	
-    -webkit-filter: blur(5px); 
-	-moz-filter: blur(5px);
-	filter: blur(5px);
-	
-}
-
-.main-content {
-	background-color:white;
-	opacity:0.5;
-
-	position:relative;
-
-	width:100%;
-	height:100%;
-
-	font-family: 'Oswald', sans-serif;
-	margin-top:20%;
-	padding:10px;
-}
-
-.header-content{
-	width:100%;
-	height:auto;
-	text-align: center;
-	vertical-align: center;
-	color:white;
-	text-shadow: 2px 2px 3px rgba(0, 0, 0, 1);
-	padding-top:10%;
-	padding-bottom: 10%;
-}
-
-.header-content h1{
-	font-size:64px;
+#pf-logo{
+	max-height:40px;
 }
