--- a/res/styles.css
+++ b/res/styles.css
@@ -120,23 +120,14 @@ body{
 }
 
 .footer {
-	display: block;
-	min-height: 60px;
+	height: 60px;
 	background: #f8f8f8;
 	color:black;
-	/*border-radius: 4px;*/
-
-	border:solid #e7e7e7;
-	border-width: 4px 1px 0px 1px;
-
-	padding-top: 30px;
-	padding-bottom: 15px;
-
-	vertical-align: middle;
+	border-top: 5px;
 }
 
 .subtle{
-	background-image:url("grey_@2x.png");
+	background-image:url("grey_@2X.png");
 	background-repeat: repeat;
 	height:100%;
 	margin-top: 0px;
@@ -161,7 +152,7 @@ body{
 } 
 
 .title-line span { 
-	background-image: url("grey_@2x.png");
+	background-image: url("grey_@2X.png");
 	background-repeat: repeat; 
 	background-position:center center;
 	padding:0 10px; 
@@ -176,7 +167,7 @@ body{
 } 
 
 .left-title-line span { 
-	background-image: url("grey_@2x.png");
+	background-image: url("grey_@2X.png");
 	background-repeat: repeat; 
 	background-position:center center;
 	padding:0 10px; 
@@ -276,8 +267,4 @@ body{
 	filter: blur(6px);
 	opacity: 0.4;
 
-}
-
-#pf-logo{
-	max-height:40px;
 }
