--- a/res/styles.css
+++ b/res/styles.css
@@ -123,7 +123,9 @@ body{
 	height: 60px;
 	background: #f8f8f8;
 	color:black;
-	border-top: 5px;
+	
+	border: solid #e7e7e7;
+	border-top: 4px 1px 0 1px;
 }
 
 .subtle{
