--- a/res/styles.css
+++ b/res/styles.css
@@ -16,6 +16,13 @@ body{
 	z-index:-3;
 }
 
+.navmodule {
+	height:80px;
+	vertical-align: middle;
+	line-height: 80px;
+	font-size:40px;
+}
+
 .navbar-logo img{
 	display: block;
 	max-width:200px;
@@ -33,6 +40,7 @@ body{
 	height:auto;
 	margin-right: auto;
 	margin-left: auto!important;
+	text-align: center;
 }
 
 /* End Bootstrap Overrides */
@@ -73,14 +81,16 @@ body{
 	margin-left: auto;
 }
 
-
+.image-module{
+	height:75%;
+}
 
 .animated-nav{
 	display:none;
 	opacity: 0;
 
-	-webkit-transition: height 0.7s, opacity 0.7s, top 0.8s;
-	transition: height 0.7s, opacity 0.7s, top 0.8s;
+	-webkit-transition: height 0.5s, opacity 0.5s, top 0.8s;
+	transition: height 0.5s, opacity 0.5s, top 0.8s;
 }
 
 .notransition {
@@ -101,6 +111,7 @@ body{
 
 #sponsors {
 	text-align: center;
+	margin-bottom:20px;
 }
 
 #sponsors img {
@@ -117,6 +128,10 @@ body{
 #sponsors .block a {
 	margin-left:20px;
 	margin-right:20px;
+}
+
+#application {
+	padding-bottom:20px;
 }
 
 .footer {
