--- a/res/styles.css
+++ b/res/styles.css
@@ -23,6 +23,10 @@ body{
 	font-size:40px;
 }
 
+@media (max-width: @screen-xs) {
+    .navmodule{font-size: 20px;}
+}
+
 .navbar-logo img{
 	display: block;
 	max-width:200px;
@@ -294,4 +298,21 @@ body{
 	filter: blur(6px);
 	opacity: 0.4;
 
+}
+
+#sponsors img{
+
+}
+
+img.grayscale {
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
+  filter: gray; /* IE6-9 */
+  -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
+  transition:all .6s ease;
+  -webkit-transition:all .6s ease;
+}
+
+img.grayscale:hover {
+  filter: none;
+  -webkit-filter: grayscale(0%);
 }
