--- a/res/styles.css
+++ b/res/styles.css
@@ -51,7 +51,17 @@ body{
 
 /* Custom Styling */
 
+#faq .answer   {
+	margin-bottom: 30px;
+}
+
+#faq .question {
+	font-weight: 700;
+	margin-bottom: 20px;
+}
+
 #top-image {
+	overflow: auto;
 	display:block;
 	background-image:url("cp_night_gray.png");
 	background-size: cover;
@@ -155,6 +165,10 @@ body{
 
 #pf-logo{
 	height:40px;
+}
+
+.module{
+	margin-bottom: 75px;
 }
 
 .subtle{
@@ -305,14 +319,16 @@ body{
 }
 
 img.grayscale {
-  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
-  filter: gray; /* IE6-9 */
-  -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
+  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); 
+  filter: gray; 
+  -webkit-filter: grayscale(100%);
   transition:all .6s ease;
   -webkit-transition:all .6s ease;
+  opacity: .67;
 }
 
 img.grayscale:hover {
   filter: none;
   -webkit-filter: grayscale(0%);
+  opacity: 1;
 }
